# cmake_exercise

./: README.md
exercise1/: CMakeLists.txt  main.cpp
exercise2/: CMakeLists.txt
exercise2/doc/: exercise2.txt
exercise2/src/: CMakeLists.txt  main.cpp
exercise3/: CMakeLists.txt
exercise3/demon/demon1/: CMakeLists.txt  main.cpp
exercise3/include/Mymath/: add.h  sub.h
exercise3/lib/: Mymath_static.lib  Mymath_static_d.lib
exercise3/src/: CMakeLists.txt
exercise3/src/Mymath/: add.cpp  sub.cpp
